Fix for test-loader scrolling on IPHONE.

--- a/test-loader.css
+++ b/test-loader.css
@@ -32,11 +32,12 @@ body::-webkit-scrollbar {
 }
 
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  pointer-events: none; /* important */
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 0;
 }
@@ -46,6 +47,7 @@ body::-webkit-scrollbar {
   text-align: center;
   padding: 0 20px;
   animation: fadeIn 1.5s ease-out;
+  padding-top: 4rem; /* Add a safe space at top */
 }
 
 h1 {
